Bug 274603 - 'yellow' and 'orange' colors are inverted in bold case
Summary: 'yellow' and 'orange' colors are inverted in bold case
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 223081 233065 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-05-31 14:43 UTC by alphsteiner
Modified: 2011-10-07 14:34 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8
Sentry Crash Report:


Attachments
yellow and orange are reversed in the bold case (59.92 KB, image/png)
2011-07-29 05:20 UTC, Jekyll Wu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description alphsteiner 2011-05-31 14:43:52 UTC
Version:           unspecified (using KDE 4.6.3) 
OS:                Linux

I have remarked that bash colors 'yellow' and 'orange' are inverted in the bold
case.


Reproducible: Always

Steps to Reproduce:
A simple command in a bash prompt :
echo -e "\e[93m YELLOW \e[0m \e[4;93m UNDERLINED \e[0m \e[1;93m BOLD \e[0m" &&
echo -e "\e[33m ORANGE \e[0m \e[4;33m UNDERLINED \e[0m \e[1;33m BOLD \e[0m"
Comment 1 Marian Kyral 2011-06-01 22:37:18 UTC
Hi,
I can confirm this on KDE 4.6.80 on gentoo.
Comment 2 Jekyll Wu 2011-07-29 05:20:13 UTC
Created attachment 62290 [details]
yellow and orange are reversed in the bold case

I can reproduce this 100% in KDE-4.7.0

I'm using zsh and 'white on black' colorscheme.
Comment 3 Kurt Hindenburg 2011-07-29 15:05:33 UTC
Yes
Comment 4 Jekyll Wu 2011-09-13 22:35:38 UTC
Git commit 771b4b22289d928f77d0a3bda9762b8137f2407c by Jekyll Wu.
Committed on 14/09/2011 at 00:24.
Pushed by jekyllwu into branch 'master'.

ANSI escape code "\e[1;93m" should generate intensive color.

The current behavior is bold(1) will toggle the intensity of an
intensive color(93), so the result is a normal color. This is
counter-intuitive. Xterm, rxvt, and all vte-base emulators generate
intensive color in this case.

BUG: 274603
FIXED-IN: 4.8
REVIEW: 102554

M  +4    -5    src/CharacterColor.h
M  +2    -2    src/Screen.cpp

http://commits.kde.org/konsole/771b4b22289d928f77d0a3bda9762b8137f2407c
Comment 5 Jekyll Wu 2011-09-25 03:18:20 UTC
*** Bug 223081 has been marked as a duplicate of this bug. ***
Comment 6 Jekyll Wu 2011-10-07 14:34:12 UTC
*** Bug 233065 has been marked as a duplicate of this bug. ***