ANSI escape code "\e[1;93m" should generate intensive color.

The current behavior is bold(1) will toggle the intensity of an
intensive color(93), so the result is a normal color. This is
counter-intuitive. Xterm, rxvt, and all vte-base emulators generate
intensive color in this case.

BUG: 274603
FIXED-IN: 4.8
REVIEW: 102554